tests/positive/QualifiedSymbol2/N.juvix
module N;

import M;

module M;
  axiom A : Type;
end;

axiom B : M.A;
