tests/negative/WrongInductiveParameterName.juvix
module WrongInductiveParameterName;

inductive T (A : Type) (B : Type) (A : Type) {};

end;